--- a/assets/style.css
+++ b/assets/style.css
@@ -152,6 +152,9 @@ a[data-toggle="collapse"] {
 .nmt-1{
   margin-top: -5px;
 }
+.lg-dec{
+  display: none;
+}
 /* ---------------------------------------------------
     CONTENT STYLE
 ----------------------------------------------------- */
