--- a/assets/responsive.css
+++ b/assets/responsive.css
@@ -16,21 +16,33 @@
     #sidebarCollapse span {
       display: none;
     }
- }
-
- 
-@media (max-width: 500px) {
-    #sidebar {
-        min-width: 200px;
-        max-width: 200px;
-        padding: 30px 15px !important;
-      }
-      .sidebar-header{
+    .lg-dec{
+        display: block;
+        width: fit-content !important;
+    }
+    .sidebar-header{
         width: 100%;
         display: flex;
         justify-content:flex-start;
         align-items: center;
       }
+      .dispaly-picture img{
+       
+        margin-right: 10px;
+      }
+ }
+
+ 
+@media (max-width: 500px) {
+    .navbar{
+        padding: 15px 0px !important;
+    }
+    #sidebar {
+        min-width: 200px;
+        max-width: 200px;
+        padding: 30px 15px !important;
+      }
+      
     #sidebar {
       margin-left: -200px;
       position: relative;
@@ -79,7 +91,9 @@
         color: white;
         font-weight: 400;
       }
-
+  .portfolio{
+    display: none;
+  }
 
 .dispaly-picture img{
     height: 40px;
@@ -87,5 +101,8 @@
     border-radius: 37px;
     border: 3px solid white;
     margin-right: 5px;
+  }
+  .skills{
+    margin-top: 20px;
   }
  }
