--- a/assets/responsive.css
+++ b/assets/responsive.css
@@ -6,7 +6,7 @@
     #sidebar {
       margin-left: -250px;
       position: relative;
-      justify-content: center;
+      justify-content: flex-start;
       align-items: center;
     }
     .ml{
