--- a/assets/style.css
+++ b/assets/style.css
@@ -209,11 +209,21 @@ a[data-toggle="collapse"] {
   width: 100%;
   overflow: hidden;
 }
+.gallery-card-text {
+  width: 100%;
+  height: 18px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
 .gallery-card-text a{
   font-size: 16px;
   color: #854fee;
   font-weight: 500;
   text-decoration: none;
+  width: 100%;
+  height: 18px;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 /* about section */
